# django-template-wsgi

./: .env.example  .gitignore  README.md  package.json  pyproject.toml  requirements.txt  tailwind.config.js
django_project/: settings.py  urls.py  wsgi.py
main/: admin.py  context_processors.py  urls.py  views.py
main/templates/main/: base.html  index.html
